# easy-vr-player-android

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  control_panel.cpp  control_panel.h  gl_helpers.cpp  gl_helpers.h  jni_bridge.cpp  multiview_pipeline.cpp  multiview_pipeline.h  openxr_app.cpp  openxr_app.h  shaders.h  video_texture.cpp  video_texture.h  vr180_mesh.cpp  vr180_mesh.h
app/src/main/java/space/vrplayer/: MainActivity.kt  VrPlayerApp.kt
app/src/main/java/space/vrplayer/auth/: AuthWebViewActivity.kt
app/src/main/java/space/vrplayer/cloud115/: DataManager115.kt  TokenManager115.kt
app/src/main/java/space/vrplayer/cloud115/models/: FileItem115.kt  VideoUrl115.kt
app/src/main/java/space/vrplayer/immersive/: ImmersiveActivity.kt  NativeBridge.kt
app/src/main/java/space/vrplayer/local/: SafVideoPicker.kt
app/src/main/java/space/vrplayer/net/: HttpClient.kt
app/src/main/java/space/vrplayer/player/: PlayerSession.kt
app/src/main/java/space/vrplayer/proxy/: LocalHttpProxy.kt
app/src/main/java/space/vrplayer/ui/: FileList115Screen.kt  HomeScreen.kt  PlayerLauncher.kt  SettingsScreen.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
